Updated Navigation Bar

--- a/loops.html
+++ b/loops.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>Janine Ortiz's 261 Sandbox</h1>
-        <h2>Loops, Conditional Statments, Functions, Variables, Parameters, Arrays, Associative Arrays</h2>
+        <h2>Loops, Conditional Statements, Functions, Variables, Parameters, Arrays, Associative Arrays</h2>
         
         <div class="navbar">
           <ul class="nav" id="topnav">
@@ -16,10 +16,10 @@
               <li><a class= "active" href="#">Loops</a></li>
               <li><a href="object.html">Object Creation</a></li>
               <li><a href="json.html">JSON Parse</a></li>
-              <li><a href="ajax.html">AJAX</a></li>
+              <li><a href="xmlhttp.html">XMLHTTP</a></li>
               <li><a href="api.html">Local Storage API</a></li>
               <li><a href="dom.html">DOM Manipulation</a></li>
-              <li><a href="manpiCSS.html">Manipuling CSS</a></li>
+              <li><a href="manipCSS.html">Manipuling CSS</a></li>
               <li><a href="transCSS.html">CSS Transitions</a></li>
               <li><a href="eventsJS.html">JS Events</a></li>
               <li><a href="video.html">Video, Audio, Canvas</a></li>
