--- a/manipCSS.html
+++ b/manipCSS.html
@@ -38,7 +38,7 @@
               <li><a href="loops.html">Loops</a></li>
               <li><a href="object.html">Object Creation</a></li>
               <li><a href="json.html">JSON Parse</a></li>
-              <li><a href="ajax.html">AJAX</a></li>
+              <li><a href="xmlhttp.html">XMLHTTP</a></li>
               <li><a href="api.html">Local Storage API</a></li>
               <li><a href="dom.html">DOM Manipulation</a></li>
               <li><a class= "active" href="#">Manipuling CSS</a></li>
