--- a/json.html
+++ b/json.html
@@ -18,10 +18,10 @@
               <li><a href="loops.html">Loops</a></li>
               <li><a href="object.html">Object Creation</a></li>
               <li><a class= "active" href="#">JSON Parse</a></li>
-              <li><a href="ajax.html">AJAX</a></li>
+              <li><a href="xmlhttp.html">XMLHTTP</a></li>
               <li><a href="api.html">Local Storage API</a></li>
               <li><a href="dom.html">DOM Manipulation</a></li>
-              <li><a href="manpiCSS.html">Manipuling CSS</a></li>
+              <li><a href="manipCSS.html">Manipuling CSS</a></li>
               <li><a href="transCSS.html">CSS Transitions</a></li>
               <li><a href="eventsJS.html">JS Events</a></li>
 			  <li><a href="video.html">Video, Audio, Canvas</a></li>
