--- a/api.html
+++ b/api.html
@@ -18,7 +18,7 @@
    </style>
     </head>
     <body>
-        <h1>Janine Ortiz's 261 Sandbox</h1>
+        <h1>Janine Ortiz's CIT 261</h1>
         <h2>Local Storage API, Storing and Retrieving Simple Data, Arrays, Associative Arrays, and Objects</h2>
         
         <div class="navbar">
