--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
-        <h1>Welcome to Janine Ortiz's 261 Sandbox</h1>
+        <h1>Welcome to Janine Ortiz's CIT 261</h1>
         <h2>Learning Each Model</h2>
         
         <div class="navbar">
@@ -29,5 +29,6 @@
         </div>
         
         <p>I have an assortment of pages for each unit</p>
+        <p> By the end of the semester I will have a site utilizing all of the different topics</p>
     </body>
 </html>
