--- a/json.html
+++ b/json.html
@@ -9,7 +9,7 @@
 		
     </head>
     <body>
-        <h1>Janine Ortiz's 261 Sandbox</h1>
+        <h1>Janine Ortiz's CIT 261</h1>
         <h2>JSON Parse and Stringify</h2>
         
         <div class="navbar">
