--- a/manipCSS.html
+++ b/manipCSS.html
@@ -29,7 +29,7 @@
 		</style>
     </head>
     <body>
-        <h1>Janine Ortiz's 261 Sandbox</h1>
+        <h1>Janine Ortiz's CIT 261</h1>
         <h2>Manipulating CSS Class Properties Using JavaScript</h2>
         
         <div class="navbar">
