--- a/object.html
+++ b/object.html
@@ -32,7 +32,7 @@
 		</script>
     </head>
     <body>
-        <h1>Janine Ortiz's 261 Sandbox</h1>
+        <h1>Janine Ortiz's CIT 261</h1>
         <h2>Object Creation Functions, Inheritance, Properties, Methods, Instantiation</h2>
         
         <div class="navbar">
