--- a/dom.html
+++ b/dom.html
@@ -33,7 +33,7 @@
 		</script>	
     </head>
     <body>
-        <h1>Janine Ortiz's 261 Sandbox</h1>
+        <h1>Janine Ortiz's CIT 261</h1>
         <h2>DOM Manipulation Using createElement, appendChild, insertBefore, removeChild, etc.</h2>
         
         <div class="navbar">
