--- a/eventsJS.html
+++ b/eventsJS.html
@@ -82,7 +82,7 @@
 		
     </head>
     <body>
-		<h1>Janine Ortiz's 261 Sandbox</h1>
+		<h1>Janine Ortiz's CIT 261</h1>
         <h2>Standard JavaScript Events and Animation and Transition Events</h2>
         
         <div class="navbar">
