--- a/loops.html
+++ b/loops.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
-        <h1>Janine Ortiz's 261 Sandbox</h1>
+        <h1>Janine Ortiz's CIT 261</h1>
         <h2>Loops, Conditional Statements, Functions, Variables, Parameters, Arrays, Associative Arrays</h2>
         
         <div class="navbar">
