--- a/video.html
+++ b/video.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
-		<h1>Janine Ortiz's 261 Sandbox</h1>
+		<h1>Janine Ortiz's CIT 261</h1>
         <h2>Video, Audio, Canvas</h2>
         
         <div class="navbar">
